assign1/tests/type-checking/bad/type-as-var-name copy.c
#include "FenneC.h"

int int i = 4;
int unsigned i = 4;
int void i = 4;

int main() {
    return 0;
}